--- a/quoteRanks/quoteRanksApp/src/app/quotes-main/quotes-list/quotes-list.component.html
+++ b/quoteRanks/quoteRanksApp/src/app/quotes-main/quotes-list/quotes-list.component.html
@@ -1,5 +1,3 @@
-<div class="col l12">
-  <p>"{{body}}" --{{author}}</p>
+<div class="col l12" *ngFor="let quote of quotes">
+  <p>"{{body}}" --{{ author }}</p>
 </div>
-
-
