--- a/product_management/pro-mgmt/src/app/product-list/product-list.component.html
+++ b/product_management/pro-mgmt/src/app/product-list/product-list.component.html
@@ -6,7 +6,7 @@
     <hr>
     <img src="{{product.url}}" width="300px"><br>
     <button (click)="delete(product.index)">DELETE</button>
-    <button (click)="edit(product.index, product.name)">EDIT</button>
+    <button (click)="edit(product.name)">EDIT</button>
   </div>
   
 </div>
